--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nelmio/api-doc-bundle": "^4.2",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
